20160806  Sat Aug  6 13:36:14 PDT 2016
    Distribution
    * Homepage is now metacpan
    * Now testing Strawberry Perl with AppVeyor
    * Kwalitee fix (Patrice Clement) [github 14]

20140709  Wed Jul  9 16:28:37 PDT 2014
    New Features
    * The "git" scheme is supported. (Schwern)
    * svn, ssh and svn+ssh schemes are supported. [rt.cpan.org 57490] (Schwern)
    * Added a --schemeless option to urifind. (Schwern)

    Bug Fixes
    * http:// is no longer matched [rt.cpan.org 63283] (Schwern)

    Backwards Incompatibilities
    * Previously, URIs stringified to their canonical version.  Now
      they stringify as written.  This results in less loss of
      information.  For example.  "Blah HTTP:://FOO.COM" previously
      would stringify as "http://foo.com/" and now it will stringify
      as "HTTP://FOO.COM".  To restore the old behavior you can call
      $uri->canonical. (Schwern)

    Distribution Changes
    * No longer using URI::URL. (Schwern)
    * Now requires URI 1.60 for Unicode support. (Schwern)


20140702  Wed Jul  2 13:41:47 PDT 2014
    New Features
    * IDNA (aka Unicode) domains are now supported. [github 3] (GwenDragon)
    * The list of TLDs for schemeless matching has been updated. [github 3] (GwenDragon)

    Bug Fixes
    * Handle balanced [], {} and quotes in addition to (). [rt.cpan.org 85053] (Schwern)
    * Don't mangle IPv6 URLs. [rt.cpan.org 85053] (Schwern)
    * Schemeless is more accurate about two letter TLDs. [github 3] (GwenDragon)

    Distribution Changes
    * Switched the issue tracker to Github. (Schwern)


20111103  Thu Nov  3 12:14:21 PDT 2011
    Bug Fixes
    * URI::URL::strict will no longer leak out of find() if the callback
      or filter fails. [rt.cpan.org 71153] (Carl Chambers)


20111020  Thu Oct 20 17:31:56 PDT 2011
    Bug Fixes
    * Things which look like URIs, but aren't, are now properly escaped like
      other text.  [rt.cpan.org 71658]

    New Features