@@ -1,3 +1,6 @@
+    Bug Fixes
+	* Fencepost recrufting order [github 12] (lazarus)
+
 20160806  Sat Aug  6 13:36:14 PDT 2016
     Distribution
     * Homepage is now metacpan
